# jcu-dparm

./: .clang-format  .gitignore  CMakeLists.txt  README.md  libraries.cmake
.github/workflows/: test.yaml
include/jcu-dparm/: ata_types.h  ata_utils.h  drive_factory.h  drive_handle.h  err.h  nvme_types.h  nvme_utils.h  types.h
include/jcu-dparm/tcg/: tcg_command.h  tcg_device.h  tcg_response.h  tcg_session.h  tcg_token.h  tcg_types.h  tcg_utils.h
src/: ata_utils.cc  drive_driver_handle.h  drive_handle_ata.cc  drive_handle_base.cc  drive_handle_base.h  drive_handle_sanitize.cc  intl_utils.cc  intl_utils.h  nvme_utils.cc
src/crypto/: hash.cc  hash.h  hash_sha_1.cc  hash_sha_1.h  pbkdf2.cc  pbkdf2.h
src/plat-linux/: apt.cc  apt.h  drive_factory.cc  driver_base.cc  driver_base.h  sgio.cc  sgio.h  sysfs_utils.cc  sysfs_utils.h  volume_finder.cc  volume_finder.h
src/plat-linux/drivers/: driver_utils.cc  driver_utils.h  nvme_driver.cc  nvme_driver.h  nvme_ioctl.h  sg_driver.cc  sg_driver.h
src/plat-win/: drive_factory.cc  driver_base.cc  driver_base.h  physical_drive_finder.cc  physical_drive_finder.h  volume_finder.cc  volume_finder.h
src/plat-win/drivers/: ata_driver.cc  ata_driver.h  driver_utils.cc  driver_utils.h  nvme_win_driver.cc  nvme_win_driver.h  samsung_nvme_driver.cc  samsung_nvme_driver.h  scsi_driver.cc  scsi_driver.h  windows_nvme_driver.cc  windows_nvme_driver.h  windows_nvme_ioctl.h
src/tcg/: tcg_command.cc  tcg_command.h  tcg_command_impl.cc  tcg_command_impl.h  tcg_constants.cc  tcg_device.cc  tcg_device.h  tcg_device_enterprise.cc  tcg_device_enterprise.h  tcg_device_general.cc  tcg_device_general.h  tcg_device_opal_1.cc  tcg_device_opal_1.h  tcg_device_opal_2.cc  tcg_device_opal_2.h  tcg_device_opal_base.cc  tcg_device_opal_base.h  tcg_intl.cc  tcg_intl.h  tcg_response_impl.cc  tcg_response_impl.h  tcg_session.cc  tcg_session.h  tcg_session_impl.cc  tcg_session_impl.h  tcg_utils.cc
test/: CMakeLists.txt  a.cc  alpine.Dockerfile  crypto_test.cc  linux.Dockerfile  types_check.test.cc  ubuntu.Dockerfile
